tests/examples/snapshots/success/safety1.fly.houdini.1.cvc4.snap
---
source: tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- verify --houdini tests/examples/success/safety1.fly"
expression: combined_stdout_stderr
---
Running Houdini, candidate invariants are:
    !q & !p

Checking initiation:
    Checking !q & !p
Candidate invariants are:
    !q & !p

Computing fixed point:
    Checking !q & !p
Fixed point reached
verifies!

======== STDERR: ===========

