tests/examples/snapshots/success/safety1.fly.houdini.1.z3.snap
---
source: tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- infer --houdini tests/examples/success/safety1.fly"
expression: combined_stdout_stderr
---
# inferred invariant:
assert always !q & !p
proof {
  invariant !q & !p
}
verifies!

======== STDERR: ===========

