tests/examples/snapshots/success/safety1.fly.z3.snap
---
source: tests/test_examples.rs
description: "--all-solvers -- verify tests/examples/success/safety1.fly"
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

