tests/examples/snapshots/success/safety1_proof_invariants.fly.houdini.1.cvc4.snap
---
source: tests/test_examples.rs
description: "--all-solvers --name=houdini.1 -- infer --houdini tests/examples/success/safety1_proof_invariants.fly"
expression: combined_stdout_stderr
---
Running Houdini, candidate invariants are:
    !p
    !p
    !q

Checking initiation:
    Checking !p
    Checking !p
    Checking !q
Candidate invariants are:
    !p
    !p
    !q

Computing fixed point:
    Checking !p
    Checking !p
    Checking !q
Fixed point reached
verifies!

======== STDERR: ===========

